Add NavigationMapFilterLagFix, which saves a few seconds in modpacks with large maps

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -53,6 +53,7 @@
     <Compile Include="LocalizationPatches.cs" />
     <Compile Include="HarmonyPatches.cs" />
     <Compile Include="ContractLagFix.cs" />
+    <Compile Include="NavigationMapFilterLagFix.cs" />
     <Compile Include="DisableSensitiveDataLogDump.cs" />
     <Compile Include="DisableDeployAudio.cs" />
     <Compile Include="DisableSimAnimations.cs" />
