First set of memory leak fixes, mostly involving save file loading

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -73,6 +73,7 @@
     <Compile Include="RemovedContractsFix.cs" />
     <Compile Include="EnableConsole.cs" />
     <Compile Include="VersionManifestPatches.cs" />
+    <Compile Include="MemoryLeakFix.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\mod.json" />
