add UnityHeapDump and add logging for MessageCenter subscriptions

--- a/source/BattletechPerformanceFix.csproj
+++ b/source/BattletechPerformanceFix.csproj
@@ -76,6 +76,7 @@
     <Compile Include="VersionManifestPatches.cs" />
     <Compile Include="MemoryLeakFix.cs" />
     <Compile Include="SimpleMetrics.cs" />
+    <Compile Include="UnityHeapDump.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\mod.json" />
